fix pmd check for test files